# Radiant-Earth-Spot-Crop

./: .gitignore  EDA_spectral_indices.ipynb  Max.ipynb  README.md  baseline_max.ipynb  bitcoin.py  dashboard.py  download_data.ipynb  eda_max.ipynb  feature_engineering.py  import docker.py  knn_model.py  main.py  modelling.py  movie_data.py  preprocessing.py  pyproject.toml  requirements.txt  requirements_dev.txt  server.py  timo_baseline_knn.py  weather.py
data/: .gitignore  mean_band_perField_perDate.csv.dvc
data_engineering/: 1_download_data.ipynb  2_convert_to_npz.ipynb  3_preprocess_data.ipynb  download_data.ipynb  download_data.py  download_test_data.py  engineering_functions.py  extract_data.ipynb  extract_data.py  extract_function.py  format_data.ipynb  format_data.py  preprocessing_data.ipynb
examples/: mlflow_pipeline.md
notebooks/: 02_convert_to_npz.ipynb  03_preprocess_data.ipynb  EDA_CLM.ipynb  EDA_clould_mask.ipynb  EDA_general_and_CLM.ipynb  EDA_model_performance.ipynb  EDA_spectral_indices.ipynb  Extra_RandomForest.ipynb  Neural_Model.ipynb  Neural_Model_V1.ipynb  Random_forest_model.ipynb  Resampling_crop_type.ipynb  baseline_max.ipynb  baseline_model_dummy_classifier.ipynb  baseline_model_randomforest.ipynb  eda_max.ipynb  feature_engineering_01_cloudmask.ipynb  feature_engineering_02_spectral_indices.ipynb  feature_engineering_03_mean_month.ipynb  gradient_boost_model.ipynb  gradient_boost_model_bands_indices.ipynb  gradient_boost_model_final.ipynb  gradient_boost_model_newData.ipynb  knn_model.ipynb  oversampling_crop_type.ipynb  zip_files.ipynb  (+5 more)
(+22 files in other folders)
