[tool.poetry]
name = "radiant-earth-spot-crop"
version = "0.1.0"
description = "Identification of crop types of fields from satellite images (Sentinel-2 bands)"
authors = ["Max Langer <max.langer.net@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">3.8, <3.10"
radiant-mlhub = "0.1.3"
rasterio = "^1.3.0"
numpy = "^1.23.0"
pandas = "^1.4.3"
seaborn = "^0.11.2"
ipykernel = "^6.15.0"
sklearn = "^0.0"
imblearn = "^0.0"
statsmodels = "^0.13.2"
xgboost = "^1.6.1"
hyperopt = "^0.2.7"
xarray = "^2022.3.0"
rioxarray = "^0.11.1"
GitPython = "^3.1.27"
typer = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
